--- a/pages/connections.mdx
+++ b/pages/connections.mdx
@@ -119,7 +119,7 @@ mssql+pyodbc://username:password@server:port/db?ApplicationIntent=ReadOnly&drive
 
 ### Google BigQuery
 
-You can connect BigQuery using the following connection string:
+You can connect to BigQuery using the following connection string:
 
 ```markdown copy filename="Connection String"
 bigquery://project/dataset
