--- a/pages/concepts/visuals.mdx
+++ b/pages/concepts/visuals.mdx
@@ -242,7 +242,7 @@ GROUP BY segment
 ```
 
 **Step 1:**
-In this example, we will plot `L1`, `L2`, `L3` columns as lines, and `B1`, `B2`, `B3` columns as stacked bars. But first, we will plot all columns as a `bar` chart and then customize it to meet our requirements.
+In this example, we will create a chart that combines lines and stacked bars. The columns `L1`, `L2`, and `L3` will be displayed as lines, while B1, B2, and B3 will be shown as stacked bars. We'll start by creating a basic bar chart and then modify it step by step.
 
 ![Chart](pages/concepts/visual_images/stacked_combo_step_1.png)
 
