--- a/pages/concepts/visuals.mdx
+++ b/pages/concepts/visuals.mdx
@@ -252,7 +252,7 @@ Now that we have the chart plotted, we can modify `L1`, `L2`, `L3` as lines by c
 ![Chart](pages/concepts/visual_images/stacked_combo_step_2.png)
 
 **Step 3:**
-And finally, need to stack the the bars by setting `stacked` property to `true` for both `x` `(options.scales.x)` and `y` `(options.scales.y)` axes in the chart config.
+And finally, we need to stack the the bars by setting `stacked` property to `true` for both `x` `(options.scales.x)` and `y` `(options.scales.y)` axes in the chart config.
 
 ```json filename="Chart Config"
 "scales": {
