--- a/pages/concepts/visuals.mdx
+++ b/pages/concepts/visuals.mdx
@@ -216,7 +216,7 @@ You can convert the above chart into an `area` chart by providing the `fill` pro
 
 ![Chart](pages/concepts/visual_images/stacked_combo_final.png)
 
-To create a stacked combo chart with dual axis, your query must be structured as shown below.
+To create a stacked combo chart with dual axis, you'll need to structure your query as shown below.
 
 ```sql {2-4} filename="Card SQL"
 SELECT segment,
