--- a/pages/concepts/visuals.mdx
+++ b/pages/concepts/visuals.mdx
@@ -372,6 +372,8 @@ GROUP BY ship_mode
 | First Class    | 228.50     | 238.50    |
 ```
 
+This example shows two series of data, `Avg_Profit` and `Avg_Sales`. You can add as many series as you would like. Each series should be a seperate `measure` column in the query.
+
 ![Chart](pages/concepts/visual_images/radar_chart.png)
 
 ---
