cleanup default values

--- a/pages/concepts/filters.mdx
+++ b/pages/concepts/filters.mdx
@@ -194,9 +194,7 @@ You can copy the filter values array by clicking on the filter icon from the con
 Now you can use this array to load the dashboard with the default filters applied.
 
 ```jsx
-import { useDashboardActions, Dashboard } from 'semaphor';
-
-const { setFilterValues } = useDashboardActions();
+import { Dashboard } from 'semaphor';
 
 const defaultFilterValues: TFilterValue[] = [
   {
