added token expiry

--- a/pages/integrate/react-component.mdx
+++ b/pages/integrate/react-component.mdx
@@ -1,4 +1,4 @@
-## React Component
+## React Integration
 
 This section outlines step-by-step instructions on how to integrate the Semaphor dashboard into your React app. We're assuming that you already have a React application in place. If not, you can use the instructions provided [here](https://vitejs.dev/guide/#scaffolding-your-first-vite-project) to bootstrap your React app.
 
