--- a/pages/concepts/card_tabs.mdx
+++ b/pages/concepts/card_tabs.mdx
@@ -1,6 +1,6 @@
 # Card Tabs
 
-In Semaphor, each visual is displayed in a frame. You can also display multiple cards in a single frame by using card tabs. You can think of Semaphor frames as a deck of cards where each card is a visual.
+In Semaphor, a dashboard is made up of frames. Each frame can contain multiple cards. You can display multiple visuals in a single frame by using card tabs. You can think of Semaphor frames as a deck of cards where each card is a visual.
 
 In the example below, we have a frame with two tabs `Month` and `Week`. The first tab shows orders by month and the second tab shows orders by week.
 
