--- a/pages/integrate/react-component.mdx
+++ b/pages/integrate/react-component.mdx
@@ -170,7 +170,7 @@ function App() {
 
 ```
 
-Next, you will need to get the `filterId` from Semaphor console. You can get the `filterId` from the filter's settings popover, and then hover on the ID icon to see the ID.
+Next, you will need to get the `filterId` from Semaphor console. You can get the `filterId` from the filter's settings (⚙️) popover, and then hover on the ID icon to see the ID.
 
 ![Filter ID](pages/integrate/images/filter_id.png)
 
