--- a/pages/integrate/react-component.mdx
+++ b/pages/integrate/react-component.mdx
@@ -3,7 +3,7 @@
 import { Callout } from 'nextra/components';
 
 <Callout type="warning" emoji="⚠️" title="React 18">
-  Currently, the Semaphor component is only compatible with React 18. We are
+  Currently, the Semaphor React component is compatible with React 18. We are
   working on adding support for React 19.
 </Callout>
 
